adjusted responsive breakpoints for Message and ErrorMessage to prevent spillage off the screen

--- a/src/ErrorMessage.css
+++ b/src/ErrorMessage.css
@@ -29,7 +29,7 @@
   }
 }
 
-@media screen and (max-aspect-ratio:3/4){
+@media screen and (max-aspect-ratio:2/3){
   .error-message p{
     font-size: 6vw;
   }
